<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Business Card Maker</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search card by full name</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_card_fragment">AddCardFragment</string>
    <string name="banner_ad_unit_id">ca-app-pub-6657666130252014/7859784872</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6657666130252014/2653648477</string>
    <string name="tagline">Simple way to manage your card!</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Add New Card</item>
        <item>Coverflow</item>
        <item>Cardbox</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/addcard</item>
        <item>@drawable/coverflow</item>
        <item>@drawable/cardbox</item>
    </array>

    <!-- Template for create card -->
    <array name="card_layout_names">
        <item>SKY BLUE</item>
        <item>GOLDEN BROWN</item>
        <item>BLACK AND WHITE</item>
    </array>
    <array name="card_layout_templates">
        <item>@drawable/template_one</item>
        <item>@drawable/template_two</item>
        <item>@drawable/template_three</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- add card fragment -->
    <string name="b_save">Save</string>
    <string name="b_cancel">Cancel</string>
    <string name="input_cardname">Input your card name</string>
    <string name="tv_browse_layout">Choose your template first</string>
    <string name="tv_full_name">Full Name</string>
    <string name="tv_job_title">Job Title</string>
    <string name="tv_phone">Phone</string>
    <string name="tv_email">Email</string>
    <string name="tv_address">Address</string>
    <string name="b_add_card">Add Card</string>
    <string name="tv_company">Company</string>

    <!-- Cover flow fragment -->
    <string name="tv_zoom">Click the card to zoom</string>

    <!-- card template example -->
    <string name="tv_full_name_">Emir Septian Sori D</string>
    <string name="tv_job_title_">Android Developer</string>
    <string name="tv_phone_">0812 6485 0796</string>
    <string name="tv_email_">emirkipang@gmail.com</string>
    <string name="tv_address_">Hj. Umayah 2 Street Kav. 52, Bandung</string>
    <string name="tv_company_">RESTU IBU</string>

    <!-- Cardbox fragmemnt -->
    <string name="delete_confirmation">Are you sure you want to delete this card?</string>
    <string name="b_delete">Delete</string>
    <string name="b_send">Send</string>
    <string name="input_email">Input your target email (use ; to input more than 1 email)</string>
    <!-- card -->


    <!-- Nav drawer item -->
    <string name="tv_add_new_card">Add New Card</string>
    <string name="title_activity_edit">Edit Card</string>

</resources>