<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:background="@color/black_2"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_company_"
            android:textColor="@color/white_"
            android:gravity="center"
            android:textSize="6pt"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white_"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/tv_address_"
            android:textSize="4pt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/tv_email_"
            android:textSize="4pt" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:text="@string/tv_phone_"
            android:textSize="4pt" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_marginBottom="21dp"
            android:text="@string/tv_job_title_"
            android:textSize="5pt" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/tv_full_name_"
            android:textSize="5pt"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>