<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_" >

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/textView2"
        android:layout_marginBottom="7dp"
        android:background="@color/white_" >
    </View>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="7dp"
        android:background="@color/white_" >
    </View>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/tv_full_name_"
        android:textColor="@color/white_"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_job_title_"
        android:textColor="@color/white_"
        android:textSize="4pt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/tv_phone_"
        android:textColor="@color/white_"
        android:textSize="4pt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_email_"
        android:textColor="@color/white_"
        android:textSize="4pt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_address_"
        android:textColor="@color/white_"
        android:textSize="4pt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:text="@string/tv_company_"
        android:textColor="@color/white_"
        android:textSize="12pt"
        android:textStyle="bold" />

</RelativeLayout>